--- a/views/admin.html
+++ b/views/admin.html
@@ -56,7 +56,7 @@
 
 
 
-  <div style="display: none;" id="inventory_add" class="container">
+  <div  id="inventory_add" class="container">
 
     <h1 class="brand"><span>Panel de modificacion Recovec</span></h1>
   
@@ -65,6 +65,85 @@
       <!-- COMPANY INFORMATION -->
       <div  class="company-info">
         <h3>Ver, modificar y agregar stock</h3>
+        <div class="container p-y-1">
+          <div class="row m-b-1">
+            <div class="col-sm-6 offset-sm-3">
+              <div class="form-group inputDnD">
+                 <input type="file" class="form-control-file text-primary font-weight-bold" id="inputFile" accept="image/*" onchange="readUrl(this)" data-title="Drag and drop a file">
+              </div>
+            </div>
+          </div>
+           <div class="row m-b-1">
+            <div class="col-sm-6 offset-sm-3">
+             <div class="form-group inputDnD">
+               <input type="file" class="form-control-file text-success font-weight-bold" id="inputFile" accept="image/*" onchange="readUrl(this)" data-title="Drag and drop a file">
+              </div>
+            </div>
+          </div>
+          <div class="row m-b-1">
+            <div class="col-sm-6 offset-sm-3">
+             <div class="form-group inputDnD">
+               <input type="file" class="form-control-file text-success font-weight-bold" id="inputFile" accept="image/*" onchange="readUrl(this)" data-title="Drag and drop a file">
+              </div>
+            </div>
+          </div>
+          <div class="row m-b-1">
+            <div class="col-sm-6 offset-sm-3">
+             <div class="form-group inputDnD">
+               <input type="file" class="form-control-file text-success font-weight-bold" id="inputFile" accept="image/*" onchange="readUrl(this)" data-title="Drag and drop a file">
+              </div>
+            </div>
+          </div>
+          <div class="row m-b-1">
+            <div class="col-sm-6 offset-sm-3">
+             <div class="form-group inputDnD">
+               <input type="file" class="form-control-file text-success font-weight-bold" id="inputFile" accept="image/*" onchange="readUrl(this)" data-title="Drag and drop a file">
+              </div>
+            </div>
+          </div>
+          <div class="row m-b-1">
+            <div class="col-sm-6 offset-sm-3">
+             <div class="form-group inputDnD">
+               <input type="file" class="form-control-file text-success font-weight-bold" id="inputFile" accept="image/*" onchange="readUrl(this)" data-title="Drag and drop a file">
+              </div>
+            </div>
+          </div>
+          <div class="row m-b-1">
+            <div class="col-sm-6 offset-sm-3">
+             <div class="form-group inputDnD">
+               <input type="file" class="form-control-file text-success font-weight-bold" id="inputFile" accept="image/*" onchange="readUrl(this)" data-title="Drag and drop a file">
+              </div>
+            </div>
+          </div>
+          <div class="row m-b-1">
+            <div class="col-sm-6 offset-sm-3">
+             <div class="form-group inputDnD">
+               <input type="file" class="form-control-file text-success font-weight-bold" id="inputFile" accept="image/*" onchange="readUrl(this)" data-title="Drag and drop a file">
+              </div>
+            </div>
+          </div>
+          <div class="row m-b-1">
+            <div class="col-sm-6 offset-sm-3">
+             <div class="form-group inputDnD">
+               <input type="file" class="form-control-file text-success font-weight-bold" id="inputFile" accept="image/*" onchange="readUrl(this)" data-title="Drag and drop a file">
+              </div>
+            </div>
+          </div>
+            <div class="row m-b-1">
+            <div class="col-sm-6 offset-sm-3">
+               <div class="form-group inputDnD">
+                 <input type="file" class="form-control-file text-warning font-weight-bold" id="inputFile" accept="image/*" onchange="readUrl(this)" data-title="Drag and drop a file">
+              </div>
+            </div>
+          </div>
+            <div class="row m-b-1">
+            <div class="col-sm-6 offset-sm-3">
+               <div class="form-group inputDnD">
+                <input type="file" class="form-control-file text-danger font-weight-bold" id="inputFile" accept="image/*" onchange="readUrl(this)" data-title="Drag and drop a file">
+              </div>
+            </div>
+          </div>
+        </div>
       </div>
       <!-- End .company-info -->
   
@@ -117,11 +196,11 @@
           </p>
           
 
-            <div class="input-file-container">  
+            <!-- <div class="input-file-container">  
               <input class="input-file" id="my-file" type="file" multiple>
               <label tabindex="0" for="my-file" class="input-file-trigger">Subir imagenes...</label>
             </div>
-            <p class="file-return"></p>
+            <p class="file-return"></p> -->
           
            
          
@@ -143,6 +222,97 @@
     
   </div>
   <!-- End .container -->
+
+
+
+
+
+
+  <style>
+    .inputDnD .form-control-file {
+    position: relative;
+    width: 100%;
+    height: 100%;
+    min-height: 6em;
+    outline: none;
+    visibility: hidden;
+    cursor: pointer;
+    background-color: #007bff;
+    box-shadow: 0 0 5px solid currentColor;
+  }
+  .inputDnD .form-control-file:before {
+    content: attr(data-title);
+    position: absolute;
+    top: 0.5em;
+    left: 0;
+    width: 100%;
+    min-height: 6em;
+    line-height: 2em;
+    padding-top: 1.5em;
+    opacity: 1;
+    visibility: visible;
+    text-align: center;
+    border: solid 1px #627EDC;
+    border-radius: 5px;
+    transition: all 0.3s cubic-bezier(0.25, 0.8, 0.25, 1);
+    overflow: hidden;
+  }
+  .inputDnD .form-control-file:hover:before {
+    border-style: solid;
+    box-shadow: inset 0px 0px 0px 0.25em #000000;
+  }
+  
+  </style>
+  <script>
+    function readUrl(input) {
+    
+    if (input.files && input.files[0]) {
+      let reader = new FileReader();
+      reader.onload = (e) => {
+        let imgData = e.target.result;
+        let imgName = input.files[0].name;
+        input.setAttribute("data-title", imgName);
+        console.log(e.target.result);
+      }
+      reader.readAsDataURL(input.files[0]);
+    }
+  
+  }
+  </script>
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 
 
 
