--- a/views/admin.html
+++ b/views/admin.html
@@ -205,7 +205,7 @@
            
          
             <p class="full">
-              <button type="submit">Agregar</button>
+              <button type="submit">Agregar mas</button>
             </p>
          
   
